<resources>
    <string name="app_name">HartmannYAWA</string>
    <string name="name_matrikelnr">Benjamin Hartmann 0915812</string> <!-- Name + Matrnr -->
    <string name="choose_city">Choose a City:</string> <!-- Label for Dropdown List -->
    <string name="get_forecast">Get 5-Day Forecast!</string>
    <string-array name="city_array">   <!--Predefined List of cities for dropdown list  -->
        <item>Vienna</item>
        <item>Salzburg</item>
        <item>Innsbruck</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed_forecast">Forecast for %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Temperatures Day %1$d</string>
    <string name="smax">Maximum</string>
    <string name="smin">Minimum</string>
    <string name="savg">Average</string>
</resources>
